--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "apollo-server": "^2.25.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.4",
-    "graphql": "^15.8.0"
+    "graphql": "^15.8.0",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
