--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
     "@graphql-tools/merge": "^9.0.1",
     "@graphql-tools/schema": "^10.0.2",
     "@prisma/client": "^5.9.1",
-    "apollo-server": "^2.25.2",
+    "@types/graphql-upload": "^16.0.7",
+    "apollo-server": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
-    "graphql": "^15.8.0",
+    "express": "^4.19.2",
+    "graphql": "^16.9.0",
+    "graphql-upload-ts": "^2.1.2",
     "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/node": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
+    "@types/node": "^22.4.1",
     "nodemon": "^3.0.3",
     "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
