--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/graphql-upload": "^16.0.7",
     "apollo-server": "^3.13.0",
     "apollo-server-express": "^3.13.0",
+    "aws-sdk": "^2.1681.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
