--- a/package.json
+++ b/package.json
@@ -17,24 +17,33 @@
     "@aws-sdk/lib-storage": "^3.637.0",
     "@graphql-tools/load-files": "^7.0.0",
     "@graphql-tools/merge": "^9.0.1",
-    "@graphql-tools/schema": "^10.0.2",
+    "@graphql-tools/schema": "^10.0.6",
     "@prisma/client": "^5.9.1",
     "@types/graphql-upload": "^16.0.7",
     "apollo-server": "^3.13.0",
+    "apollo-server-core": "^3.13.0",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-upload-ts": "^2.1.2",
+    "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "subscriptions-transport-ws": "^0.11.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/node": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.4.1",
     "nodemon": "^3.0.3",
     "prisma": "^5.18.0",
