--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/server --ext ts,js --delay 2s",
     "migrate": "npx prisma migrate dev",
-    "studio": "npx prisma studio"
+    "studio": "npx prisma studio",
+    "build": "npx tsc",
+    "start": "node build/server"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +17,7 @@
     "@aws-sdk/client-s3": "^3.637.0",
     "@aws-sdk/credential-providers": "^3.637.0",
     "@aws-sdk/lib-storage": "^3.637.0",
+    "@babel/cli": "^7.25.6",
     "@graphql-tools/load-files": "^7.0.0",
     "@graphql-tools/merge": "^9.0.1",
     "@graphql-tools/schema": "^10.0.6",
@@ -40,6 +43,7 @@
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/node": "^7.23.9",
+    "@babel/plugin-transform-runtime": "^7.25.4",
     "@babel/preset-env": "^7.23.9",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
